# arm_moveit_and_demo

camera_processing_nodes/: package.xml  setup.cfg  setup.py
camera_processing_nodes/camera_processing_nodes/: colorMaskProcessing.py  time_helpers.py
camera_processing_nodes/config/: color_detection_classes.yaml
graspable_shape_msgs/: CMakeLists.txt  package.xml
graspable_shape_msgs/msg/: ColorMask.msg  Cylinder.msg
open_x_moveit_config/: CMakeLists.txt  package.xml
open_x_moveit_config/config/: arm.srdf  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml
pnp_playground/: CMakeLists.txt  package.xml
pnp_playground/gazebo/: open_x_pick_and_place_task.erb  open_x_pick_and_place_task.rb  open_x_pick_and_place_task.sdf
pnp_playground/launch/: open_x_pnp.launch.py
pnp_playground/src/: conveyor_laser_processing.py
